# Document-Generator

./: CMakeLists.txt  DocGen.cpp  DocGen.h  ExtractorParser.cpp  ExtractorParser.h  HTMLDataExtractor.cpp  HTMLDataExtractor.h  filedata.h  functions.cpp  functions.h  main.cpp
include/: DocGen.h  EmailGenerator.h  ExtractorParser.h  HTMLDataExtractor.h  filedata.h  functions.h
src/: DocGen.cpp  EmailGenerator.cpp  ExtractorParser.cpp  HTMLDataExtractor.cpp  functions.cpp  main.cpp
